# DriveVLM

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.dvc/: config
assets/: benchmark_gdino.md  benchmark_qwen.md
data/: .gitignore  images.dvc  test_commands.json.dvc  train_commands.json.dvc  val_commands.json.dvc
drive_vlm/: data.py  eval.py  infer.py  model.py
scripts/: benchmark.py  benchmark_qwen.py  demo.py  eval_baseline.py  eval_gdino.py  eval_qwen.py  finetune_gdino.py  finetune_qwen.py  infer_demo.py  serve.py
scripts/hpc/: Apptainer.def  README.md  cluster.env.example  eval_baseline.slurm
tests/: test_data.py  test_eval.py
