[project]
name = "drive-vlm"
version = "0.1.0"
description = "Talk2Car referring-expression grounding with Grounding DINO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.41",
    "tqdm>=4.66",
    # MLOps
    "mlflow>=2.12",
    "dvc>=3.50",
]

[dependency-groups]
dev = ["ruff>=0.4", "pytest>=8.2", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drive_vlm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
